syntax = "proto3";
option go_package = "github.com/w1ns3c/passkeeper/internal/transport/grpc/protofiles/proto";

import "google/protobuf/empty.proto";

message CryptoBlob {
  string ID = 1;
  string Blob = 2;
//  string ID = 5;
}

message BlobAddRequest {
  CryptoBlob cred = 1;
}

message BlobGetRequest {
  string credID = 1;
}

message BlobGetResponse {
  CryptoBlob cred = 1;
}

message BlobUpdRequest {
  CryptoBlob blob = 1;
}

message BlobDelRequest {
  string credID = 1;
}

message BlobListResponse {
  repeated CryptoBlob blobs = 1;
}

service BlobSvc {
  rpc BlobAdd(BlobAddRequest) returns (google.protobuf.Empty);
  rpc BlobGet(BlobGetRequest) returns (BlobGetResponse);
  rpc BlobUpd(BlobUpdRequest) returns (google.protobuf.Empty);
  rpc BlobDel(BlobDelRequest) returns (google.protobuf.Empty);
  rpc BlobList(google.protobuf.Empty) returns (BlobListResponse);
}